# demo-c

./: CMakeLists.txt  README.md  main.c
include/: leapyear.h
src/: leapyear.c  main.c  util.c  util.h
tests/: CMakeLists.txt  test_leapyear.c
